--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,12 @@
 
   <body>
     <%= yield %>
+    <% flash.each do |key, message| %> 
+			<div class="text-center alert alert-<%= key == 'notice'? 'success': 'danger' %>">
+				<%= message %> 
+			</div>
+		<% end %>
+
+
   </body>
 </html>
