--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,8 +1,7 @@
 <h3 class="text_center">Adding New Article</h3>
 <div class="row">
 	<div class="col-md-12">￼
-￼￼￼￼￼
-	<% if @article.errors.any? %>
+		<% if @article.errors.any? %>
 		<div class="panel panel-danger col-md-offset-1">
 			<div class="panel-heading"> 
 				<h2 class="panel-title">
@@ -18,14 +17,16 @@
 			</div>
 		</div> 
 	<% end %>
-		<%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f|%>el
+￼￼￼￼￼
+	
+		<%= form_for(@article, :html => {class: "form-horizontal", role: "form"}) do |f|%>
 		  <div class="form-group">
 		  	<div class="control-label col-md-1">
 		  		<%= f.label :title %>
-		  		<div class="col-md-11">
+		  	</div>	
+		  	<div class="col-md-11">
 		  			<%= f.text_field :title, class: 'form-control', placeholder: "Title of article", autofocus: true %>
-		  		</div>
-		  	</div>
+		  	</div>		  	
 		  </div>
 		  <div class='form-group'>
 				<div class='control-label col-md-1'> 
@@ -39,8 +40,9 @@
 				<div class='col-md-offset-1 col-md-11'>
 					<%= f.submit class: 'btn btn-primary btn-lg pull-right' %> 
 				</div>
-			</div> 
+			</div>  
 		<% end %>
 
 	</div>
+
 </div>
