--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,15 @@
-<%=link_to "New Article", new_article_path %>
+
+<%=link_to "New Article", new_article_path ,class: "btn btn-default btn-lg" ,id: "new-article-btn"%>
+
+<% @articles.each do |article| %>
+  <div class="wel well-lg">
+  	<div class="article-title">
+  		<%= link_to article.title, article_path(article)%>
+  	</div>
+  	<div class="article-body">
+  		<%= truncate(article.body,length: 500) %>
+  	</div>
+  </div>
+<% end %>  
+
 
