--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,14 +1,14 @@
 <h3 class="text_center">Adding New Article</h3>
 <div class="row">
 	<div class="col-md-12">￼
-￼￼￼￼￼
+￼￼￼
 	<% if @article.errors.any? %>
 		<div class="panel panel-danger col-md-offset-1">
 			<div class="panel-heading"> 
 				<h2 class="panel-title">
-				<%= pluralize(@article.errors.count, "error") %>
-				prohibited this article from being saved: </h2>
-			<div class="panel-body"> 
+				  <%= pluralize(@article.errors.count, "error") %>prohibited this article from being saved: 
+			  </h2>
+			 <div class="panel-body"> 
 				<ul>
 					<% @article.errors.full_messages.each do |msg| %> 
 						<li> <%= msg %> </li> 
