--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,7 +1,10 @@
 
 <%=link_to "New Article", new_article_path ,class: "btn btn-default btn-lg" ,id: "new-article-btn"%>
 
-<% @articles.each do |article| %>
+<% if @articles.empty? %>
+	<h1 id="no-articles">No Articles Created</h1>
+<% else %> 
+	<% @articles.each do |article| %>
   <div class="wel well-lg">
   	<div class="article-title">
   		<%= link_to article.title, article_path(article)%>
@@ -10,6 +13,8 @@
   		<%= truncate(article.body,length: 500) %>
   	</div>
   </div>
-<% end %>  
+  <% end %>
+<% end %>
+
 
 
