--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h3 class="text_center">Adding New Article</h3>
+<h3 class="text_center">Editing an Article</h3>
 
 		<% if @article.errors.any? %>
 
@@ -50,3 +50,4 @@
 	</div>
 
 </div>
+
