--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
 body {
   padding-top: 80px;
   background: #e1e1e1;
@@ -47,7 +48,6 @@ body {
   color: #64103F;
 }
 
-
 // Listing articles styling
 
 .article-title {
@@ -77,10 +77,6 @@ body {
   margin-top: 20px;
   color: #0000ff;
 }
-.article-detail {
-  margin-top: 20px;
-  color: #0000ff;
-}
 
 .article-detail-title {
   font-size: 3em;
@@ -97,3 +93,23 @@ body {
   margin-top: 20px;
 }
 
+// Sign up -- Sign in
+.sign-link a {
+  color: #64103F;
+}
+
+#error_explanation {
+ background-color: #f2dede;
+ color: #a94442;
+ text-align: left;
+ padding: 5px 20px;
+ margin-bottom: 30px;
+}
+
+#error_explanation h2 {
+ font-size: 150%;
+}
+
+footer {
+  color: #64103F;
+}
